--- a/Homework/NLP_20thDec_HW_J051_Credit_fraud.ipynb
+++ b/Homework/NLP_20thDec_HW_J051_Credit_fraud.ipynb
@@ -48,7 +48,7 @@
         "colab": {}
       },
       "source": [
-        "data = pd.read_csv(\"/content/Credit_card_Defaulters.csv\")"
+        "data = pd.read_csv(\"/content/Credit_card_Defaulters.csv\")#downloaded from kaggle"
       ],
       "execution_count": 0,
       "outputs": []
@@ -339,61 +339,6 @@
             "tags": []
           },
           "execution_count": 6
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "I_crbRTz70v-",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 454
-        },
-        "outputId": "0f2244b5-47c8-4a79-b2eb-9a419feeae7e"
-      },
-      "source": [
-        "df.isna().sum()"
-      ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "ID           0\n",
-              "LIMIT_BAL    0\n",
-              "SEX          0\n",
-              "EDUCATION    0\n",
-              "MARRIAGE     0\n",
-              "AGE          0\n",
-              "PAY_0        0\n",
-              "PAY_2        0\n",
-              "PAY_3        0\n",
-              "PAY_4        0\n",
-              "PAY_5        0\n",
-              "PAY_6        0\n",
-              "BILL_AMT1    0\n",
-              "BILL_AMT2    0\n",
-              "BILL_AMT3    0\n",
-              "BILL_AMT4    0\n",
-              "BILL_AMT5    0\n",
-              "BILL_AMT6    0\n",
-              "PAY_AMT1     0\n",
-              "PAY_AMT2     0\n",
-              "PAY_AMT3     0\n",
-              "PAY_AMT4     0\n",
-              "PAY_AMT5     0\n",
-              "PAY_AMT6     0\n",
-              "default      0\n",
-              "dtype: int64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 7
         }
       ]
     },
