--- a/Classwork/NLP_Classwork6_J051.ipynb
+++ b/Classwork/NLP_Classwork6_J051.ipynb
@@ -105,7 +105,7 @@
         "def toktoktok(text):\n",
         "  text= text.lower()\n",
         "  text = text.translate(text.maketrans('','',digits))#removing digits\n",
-        "  text = text.translate(text.maketrans('', '', '!\"@#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~1234567890'))\n",
+        "  text = text.translate(text.maketrans('', '', '!\"@#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'))\n",
         "  return text\n",
         " "
       ],
@@ -130,16 +130,16 @@
       "metadata": {
         "id": "xb6vmiIlm9Ym",
         "colab_type": "code",
+        "outputId": "d98c84cc-8682-4df3-ff77-ab8f93e7127c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 218
-        },
-        "outputId": "d98c84cc-8682-4df3-ff77-ab8f93e7127c"
+        }
       },
       "source": [
         "twitter['TweetTokens']"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -195,16 +195,16 @@
       "metadata": {
         "id": "UB5kb-wvn8UH",
         "colab_type": "code",
+        "outputId": "ed2e838f-bf77-43ea-cabf-b4dc4e5e1367",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 185
-        },
-        "outputId": "ed2e838f-bf77-43ea-cabf-b4dc4e5e1367"
+        }
       },
       "source": [
         "vectorizer.get_feature_names()[:10]"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -234,16 +234,16 @@
       "metadata": {
         "id": "5sDPgZ_QoL-n",
         "colab_type": "code",
+        "outputId": "9e66f441-6032-48d8-858c-a59ff072b711",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 134
-        },
-        "outputId": "9e66f441-6032-48d8-858c-a59ff072b711"
+        }
       },
       "source": [
         "print(X.toarray())"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,16 +278,16 @@
       "metadata": {
         "id": "i1phZEY3r_DI",
         "colab_type": "code",
+        "outputId": "5ed4e2aa-807c-469b-cda7-3cfd494837a0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 261
-        },
-        "outputId": "5ed4e2aa-807c-469b-cda7-3cfd494837a0"
+        }
       },
       "source": [
         "features.head()"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -906,16 +906,16 @@
       "metadata": {
         "id": "o8nmI_QyudVf",
         "colab_type": "code",
+        "outputId": "c1f8bede-1b5c-4771-e254-b53e62ad7948",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 168
-        },
-        "outputId": "c1f8bede-1b5c-4771-e254-b53e62ad7948"
+        }
       },
       "source": [
         "ran.fit(x_train,y_train)"
       ],
-      "execution_count": 74,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -950,17 +950,17 @@
       "metadata": {
         "id": "LyNvRCYnu5Kj",
         "colab_type": "code",
+        "outputId": "c8026581-2d29-4296-9212-9eb2e5bbf69f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 185
-        },
-        "outputId": "c8026581-2d29-4296-9212-9eb2e5bbf69f"
+        }
       },
       "source": [
         "y_pred = ran.predict(x_test)\n",
         "print(classification_report(ran.predict(x_test),y_test))#default threshold(0.5)"
       ],
-      "execution_count": 75,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1004,16 +1004,16 @@
       "metadata": {
         "id": "sWHP9zd22sIb",
         "colab_type": "code",
+        "outputId": "ccd1e321-26b3-4434-9957-52c09fc063a2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "ccd1e321-26b3-4434-9957-52c09fc063a2"
+        }
       },
       "source": [
         "multiclass_roc_auc_score(y_test, y_pred)"
       ],
-      "execution_count": 77,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1048,17 +1048,17 @@
       "metadata": {
         "id": "V2jhy6M-3GgI",
         "colab_type": "code",
+        "outputId": "cc7d2bcb-84f6-4145-ea4c-f353968c05fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 134
-        },
-        "outputId": "cc7d2bcb-84f6-4145-ea4c-f353968c05fe"
+        }
       },
       "source": [
         "pred_ran = ran.predict_proba(x_test)\n",
         "pred_ran"
       ],
-      "execution_count": 79,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1160,16 +1160,16 @@
       "metadata": {
         "id": "2DgMNdDsy6d5",
         "colab_type": "code",
+        "outputId": "8363d74a-bb24-41f0-a482-8bf1dc3ae7dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "8363d74a-bb24-41f0-a482-8bf1dc3ae7dd"
+        }
       },
       "source": [
         "np.bincount((le.fit_transform(y_train)))"
       ],
-      "execution_count": 69,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1190,16 +1190,16 @@
       "metadata": {
         "id": "lufyTnQdy-SI",
         "colab_type": "code",
+        "outputId": "897fd520-98c4-4e63-edc2-3eb0f1c1b40c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 185
-        },
-        "outputId": "897fd520-98c4-4e63-edc2-3eb0f1c1b40c"
+        }
       },
       "source": [
         "print(classification_report(le.inverse_transform(best_preds),lala))"
       ],
-      "execution_count": 80,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1224,16 +1224,16 @@
       "metadata": {
         "id": "olGAYpvy1sK4",
         "colab_type": "code",
+        "outputId": "2cc4ea35-3f2e-4b4d-8ace-11e131dd2627",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "2cc4ea35-3f2e-4b4d-8ace-11e131dd2627"
+        }
       },
       "source": [
         "np.bincount((best_preds))"
       ],
-      "execution_count": 81,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1254,18 +1254,18 @@
       "metadata": {
         "id": "bufZ5Poo1xTS",
         "colab_type": "code",
+        "outputId": "ce716ebc-ff0b-48f9-b2f9-0128a7472142",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 185
-        },
-        "outputId": "ce716ebc-ff0b-48f9-b2f9-0128a7472142"
+        }
       },
       "source": [
         "preds = clf.predict(x_train)\n",
         "best_preds_train= [np.argmax(line) for line in preds]\n",
         "print(classification_report(le.inverse_transform(best_preds_train),y_train))"
       ],
-      "execution_count": 82,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1300,11 +1300,11 @@
       "metadata": {
         "id": "mmvjhG-b2CLy",
         "colab_type": "code",
+        "outputId": "3d620ea4-0dbf-4a24-a869-6decf79c9f04",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 790
-        },
-        "outputId": "3d620ea4-0dbf-4a24-a869-6decf79c9f04"
+        }
       },
       "source": [
         "###for lgbm\n",
@@ -1325,7 +1325,7 @@
         "print(\"Default Threshold for rf : \\n\",(classification_report(ran.predict(x_test),lala)))\n",
         "print(\"\\n 0.6 threshold for rf : \\n\",classification_report(le.inverse_transform(thresh_1(pred_rf)),lala) )"
       ],
-      "execution_count": 86,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1396,11 +1396,11 @@
       "metadata": {
         "id": "iQXUoY-E5bn5",
         "colab_type": "code",
+        "outputId": "3b1f9b81-b24d-4b6f-b64c-4363929c042c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 790
-        },
-        "outputId": "3b1f9b81-b24d-4b6f-b64c-4363929c042c"
+        }
       },
       "source": [
         "print(\"Default Threshold for lgbm : \\n\",classification_report(le.inverse_transform(best_preds_train),y_train))\n",
@@ -1419,7 +1419,7 @@
         "print(\"Default Threshold for rf : \\n\",(classification_report(ran.predict(x_test),lala)))\n",
         "print(\"\\n 0.7 threshold for rf : \\n\",classification_report(le.inverse_transform(thresh_2(pred_rf)),lala) )"
       ],
-      "execution_count": 89,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1490,11 +1490,11 @@
       "metadata": {
         "id": "Mtbp2Ufq6D6Z",
         "colab_type": "code",
+        "outputId": "9e4075c6-4e71-4435-ed19-1fc6f480963e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 790
-        },
-        "outputId": "9e4075c6-4e71-4435-ed19-1fc6f480963e"
+        }
       },
       "source": [
         "print(\"Default Threshold for lgbm : \\n\",classification_report(le.inverse_transform(best_preds_train),y_train))\n",
@@ -1513,7 +1513,7 @@
         "print(\"Default Threshold for rf : \\n\",(classification_report(ran.predict(x_test),lala)))\n",
         "print(\"\\n 0.8 threshold for rf : \\n\",classification_report(le.inverse_transform(thresh_3(pred_rf)),lala) )"
       ],
-      "execution_count": 91,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
