--- a/Classwork/NLP_18thJan.ipynb
+++ b/Classwork/NLP_18thJan.ipynb
@@ -6,25 +6,15 @@
       "name": "NLP_18thJan.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMMaDAOyGqoCdTDXTsME4oh",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyO+iCFccIOcQnlL5/G/kBGn"
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/universeatmyfeet/NLP/blob/master/Classwork/NLP_18thJan.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -52,6 +42,44 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "mfBz8eR30gfx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "5834c6aa-5ea8-4ede-acda-d044c0912732"
+      },
+      "source": [
+        "nltk.download('punkt')"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "CIZyZcKOISY1",
         "colab_type": "code",
         "colab": {}
@@ -67,17 +95,17 @@
       "metadata": {
         "id": "D2kShbiwIV1_",
         "colab_type": "code",
+        "outputId": "86782e90-ef12-4dfe-9daa-703b15c0d4fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
-        },
-        "outputId": "b2222aba-92da-480b-b330-f617422d1188"
+        }
       },
       "source": [
         "nltk.download('stopwords')\n",
         "stopwords = set(stopwords.words('english'))"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,32 +122,14 @@
       "metadata": {
         "id": "2R7o9T27IYyF",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "2b06370f-1851-4628-dd2e-98023086197b"
+        "colab": {}
       },
       "source": [
         "abc = urlopen(link)\n",
-        "zf = ZipFile(io.BytesIO(abc.read()))\n",
-        "zf.namelist()"
+        "zf = ZipFile(io.BytesIO(abc.read()))"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['SMSSpamCollection', 'readme']"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 4
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -139,16 +149,16 @@
       "metadata": {
         "id": "KKAjB5nfM8JO",
         "colab_type": "code",
+        "outputId": "56a364fe-0f1e-4e22-a293-b7318bc64366",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
-        },
-        "outputId": "d1ec26c0-a0a3-4d66-ba7b-7358bf4f4fb2"
+        }
       },
       "source": [
         "spam.head()"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -218,7 +228,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -261,16 +271,16 @@
       "metadata": {
         "id": "cyvJ5JgIOhXB",
         "colab_type": "code",
+        "outputId": "0fe284ab-996b-4f86-c119-97a017c954e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 218
-        },
-        "outputId": "9ac865d4-b590-45e2-ccaf-92c14bc4e719"
+        }
       },
       "source": [
         "spam['processed']"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -293,7 +303,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     },
@@ -306,8 +316,8 @@
       },
       "source": [
         "\n",
-        "vectorizer = TfidfVectorizer()\n",
-        "X = vectorizer.fit_transform(spam['processed'])"
+        "tf = TfidfVectorizer()\n",
+        "X = tf.fit_transform(spam['processed'])"
       ],
       "execution_count": 0,
       "outputs": []
@@ -320,7 +330,7 @@
         "colab": {}
       },
       "source": [
-        "df = pd.DataFrame(X.toarray(), columns=vectorizer.get_feature_names())"
+        "df = pd.DataFrame(X.toarray(), columns=tf.get_feature_names())"
       ],
       "execution_count": 0,
       "outputs": []
@@ -385,30 +395,31 @@
       "metadata": {
         "id": "zZDNY9IrSCVW",
         "colab_type": "code",
+        "outputId": "ee4878ab-22f7-44fa-fcd1-0b7e69eb7fa3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 185
-        },
-        "outputId": "032ee107-69ca-4006-a072-3b3b23d7a6b0"
+        }
       },
       "source": [
+        "\n",
         "from sklearn.metrics import classification_report,accuracy_score,confusion_matrix\n",
         "print(classification_report(y_test,y_pred))\n",
         "accuracy_score(y_test,y_pred)"
       ],
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "         ham       0.97      1.00      0.99      1448\n",
-            "        spam       1.00      0.81      0.89       224\n",
+            "         ham       0.97      1.00      0.98      1448\n",
+            "        spam       1.00      0.80      0.89       224\n",
             "\n",
             "    accuracy                           0.97      1672\n",
-            "   macro avg       0.99      0.90      0.94      1672\n",
-            "weighted avg       0.98      0.97      0.97      1672\n",
+            "   macro avg       0.98      0.90      0.94      1672\n",
+            "weighted avg       0.97      0.97      0.97      1672\n",
             "\n"
           ],
           "name": "stdout"
@@ -417,13 +428,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.9742822966507177"
+              "0.9730861244019139"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 17
         }
       ]
     },
@@ -435,7 +446,7 @@
         "colab": {}
       },
       "source": [
-        "tester = vectorizer.transform(['This is the 2nd time we have tried 2 contact u. U have won the £750 Pound prize. 2 claim is easy, call 087187272008 NOW1! Only 10p per minute. BT-national-rate.'])"
+        "tester = tf.transform(['This is the 2nd time we have tried 2 contact u. U have won the £750 Pound prize. 2 claim is easy, call 087187272008 NOW1! Only 10p per minute. BT-national-rate.'])"
       ],
       "execution_count": 0,
       "outputs": []
@@ -445,16 +456,16 @@
       "metadata": {
         "id": "pnY6UuSvSVX4",
         "colab_type": "code",
+        "outputId": "06304063-c0f7-43a1-e5cd-604b654ec267",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "cb21d102-4424-414d-a834-c4efeb453a23"
+        }
       },
       "source": [
         "rfc.fit(X,spam['type']).predict(tester)"
       ],
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -466,7 +477,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 19
         }
       ]
     }
